<?xml version="1.0"?>
<package format="2">
  <name>tank_odometry</name>
  <version>0.0.0</version>
  <description>The AprilTag-based localzation for Autonomous Underwater Vehicles (muAUV)</description>


  <maintainer email="daniel.duecker@tuhh.de">Daniel Duecker</maintainer>
  <license>BSD</license>

  <author email="nathalie.bauschmann@tuhh.de">Nathalie Bauschmann</author>
  <author email="daniel.duecker@tuhh.de">Daniel Duecker</author>

  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
  
  </export>
</package>
